infra/aws/cloudformation/reserve-web-foundation.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: TheOutHaven fully isolated Reserve web foundation with dedicated network, ALB, ECS cluster, ECR, IAM, logs, secrets, and WAF.

Parameters:
  Environment:
    Type: String
    Default: production
    AllowedValues: [production, staging]
  ReserveHost:
    Type: String
    Default: reserve.theouthaven.com
  CertificateArn:
    Type: String

Resources:
  ReserveVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.44.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ReserveVpc
      InternetGatewayId: !Ref ReserveInternetGateway

  ReservePublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ReserveVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.44.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - { Key: Name, Value: !Sub 'toh-${Environment}-reserve-a' }
        - { Key: Project, Value: TheOutHaven }
        - { Key: Service, Value: ReserveWeb }

  ReservePublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ReserveVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: 10.44.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - { Key: Name, Value: !Sub 'toh-${Environment}-reserve-b' }
        - { Key: Project, Value: TheOutHaven }
        - { Key: Service, Value: ReserveWeb }

  ReserveRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ReserveVpc
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: ReserveInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref ReserveRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ReserveInternetGateway

  ReserveSubnetAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ReserveRouteTable
      SubnetId: !Ref ReservePublicSubnetA

  ReserveSubnetAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ReserveRouteTable
      SubnetId: !Ref ReservePublicSubnetB

  ReserveAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Public ingress for TheOutHaven Reserve
      VpcId: !Ref ReserveVpc
      SecurityGroupIngress:
        - { IpProtocol: tcp, FromPort: 80, ToPort: 80, CidrIp: 0.0.0.0/0 }
        - { IpProtocol: tcp, FromPort: 443, ToPort: 443, CidrIp: 0.0.0.0/0 }
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveTaskSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Reserve ECS task ingress from Reserve ALB only
      VpcId: !Ref ReserveVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref ReserveAlbSecurityGroup
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub 'toh-${Environment}-reserve-web'
      Scheme: internet-facing
      Type: application
      IpAddressType: ipv4
      SecurityGroups: [!Ref ReserveAlbSecurityGroup]
      Subnets: [!Ref ReservePublicSubnetA, !Ref ReservePublicSubnetB]
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: 'true'
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub 'toh-${Environment}-reserve'
      VpcId: !Ref ReserveVpc
      Protocol: HTTP
      Port: 3000
      TargetType: ip
      HealthCheckEnabled: true
      HealthCheckProtocol: HTTP
      HealthCheckPath: /api/health/platform-dr
      HealthCheckIntervalSeconds: 15
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Matcher: { HttpCode: '200' }
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '15'
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ReserveLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ReserveTargetGroup

  ReserveHttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ReserveLoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
        - CertificateArn: !Ref CertificateArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ReserveTargetGroup

  ReserveWebAcl:
    Type: AWS::WAFv2::WebACL
    Properties:
      Name: !Sub 'toh-${Environment}-reserve-web'
      Scope: REGIONAL
      DefaultAction: { Allow: {} }
      VisibilityConfig:
        CloudWatchMetricsEnabled: true
        MetricName: !Sub 'toh-${Environment}-reserve-web'
        SampledRequestsEnabled: true
      Rules:
        - Name: AWSManagedRulesCommonRuleSet
          Priority: 10
          OverrideAction: { None: {} }
          Statement:
            ManagedRuleGroupStatement:
              VendorName: AWS
              Name: AWSManagedRulesCommonRuleSet
          VisibilityConfig:
            CloudWatchMetricsEnabled: true
            MetricName: !Sub 'toh-${Environment}-reserve-common'
            SampledRequestsEnabled: true
        - Name: AWSManagedRulesKnownBadInputsRuleSet
          Priority: 20
          OverrideAction: { None: {} }
          Statement:
            ManagedRuleGroupStatement:
              VendorName: AWS
              Name: AWSManagedRulesKnownBadInputsRuleSet
          VisibilityConfig:
            CloudWatchMetricsEnabled: true
            MetricName: !Sub 'toh-${Environment}-reserve-known-bad'
            SampledRequestsEnabled: true

  ReserveWebAclAssociation:
    Type: AWS::WAFv2::WebACLAssociation
    Properties:
      ResourceArn: !Ref ReserveLoadBalancer
      WebACLArn: !GetAtt ReserveWebAcl.Arn

  ReserveRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub 'theouthaven-${Environment}-reserve-web'
      ImageScanningConfiguration: { ScanOnPush: true }
      ImageTagMutability: IMMUTABLE
      EncryptionConfiguration: { EncryptionType: AES256 }
      LifecyclePolicy:
        LifecyclePolicyText: '{"rules":[{"rulePriority":1,"description":"Keep last 30 Reserve images","selection":{"tagStatus":"any","countType":"imageCountMoreThan","countNumber":30},"action":{"type":"expire"}}]}'
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub 'toh-${Environment}-reserve-web'
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub '/aws/ecs/toh-${Environment}-reserve-web'
      RetentionInDays: 30

  ReserveAppEnvSecret:
    Type: AWS::SecretsManager::Secret
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      Name: !Sub '/theouthaven/${Environment}/reserve-web/app-env'
      SecretString: '{}'
      Tags:
        - { Key: Project, Value: TheOutHaven }
        - { Key: Environment, Value: !Ref Environment }
        - { Key: Service, Value: ReserveWeb }

  ReserveExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub 'TheOutHavenReserveWebExecution-${Environment}'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: { Service: ecs-tasks.amazonaws.com }
            Action: sts:AssumeRole
      Policies:
        - PolicyName: reserve-web-task-execution
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: ecr:GetAuthorizationToken
                Resource: '*'
              - Effect: Allow
                Action: [ecr:BatchCheckLayerAvailability, ecr:GetDownloadUrlForLayer, ecr:BatchGetImage]
                Resource: !GetAtt ReserveRepository.Arn
              - Effect: Allow
                Action: [logs:CreateLogStream, logs:PutLogEvents]
                Resource: !GetAtt ReserveLogGroup.Arn
              - Effect: Allow
                Action: secretsmanager:GetSecretValue
                Resource: !Ref ReserveAppEnvSecret

  ReserveTaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub 'TheOutHavenReserveWebTask-${Environment}'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: { Service: ecs-tasks.amazonaws.com }
            Action: sts:AssumeRole

Outputs:
  ReserveLoadBalancerDnsName: { Value: !GetAtt ReserveLoadBalancer.DNSName }
  ReserveLoadBalancerArn: { Value: !Ref ReserveLoadBalancer }
  ReserveVpcId: { Value: !Ref ReserveVpc }
  ReserveSubnetIds: { Value: !Join [',', [!Ref ReservePublicSubnetA, !Ref ReservePublicSubnetB]] }
  ReserveTaskSecurityGroupId: { Value: !Ref ReserveTaskSecurityGroup }
  ReserveTargetGroupArn: { Value: !Ref ReserveTargetGroup }
  ReserveRepositoryName: { Value: !Ref ReserveRepository }
  ReserveRepositoryUri: { Value: !GetAtt ReserveRepository.RepositoryUri }
  ReserveClusterName: { Value: !Ref ReserveCluster }
  ReserveLogGroupName: { Value: !Ref ReserveLogGroup }
  ReserveAppEnvSecretArn: { Value: !Ref ReserveAppEnvSecret }
  ReserveExecutionRoleArn: { Value: !GetAtt ReserveExecutionRole.Arn }
  ReserveTaskRoleArn: { Value: !GetAtt ReserveTaskRole.Arn }
  ReserveWebAclArn: { Value: !GetAtt ReserveWebAcl.Arn }
  ReserveHost: { Value: !Ref ReserveHost }
